# hpa

./: .env.example  .gitignore  QUICKSTART.md  skills-lock.json
.claude/: settings.local.json
backend/spins/counter/: Cargo.toml  spin.toml
backend/spins/counter/src/: lib.rs
backend/spins/stream-processor/: Cargo.toml  spin.toml
docs/: SP - 1 - Provide a plan to implement it step by step - k8s Kargo Workflow.md  SP - 2 - Also provide architecture structure (folders_git repos) for Kargo_ArgoCD based pipeline.md  SP - 3 - Architecture diagram.md  SP - 4 - Architecture diagram with observability (VictoriaMetrics).md  SP - 5 - Shipped offline.md  SP - 6 - 1 - Talos OS in Offline mode.md  SP - 6 - 2 - Talos and OpenTofu provisioning libvirt with offline mode (cache).md  SP - 6 - 3 - Talos and OpenTofu - there must be Ceph disk connected to VMs.md  SP - 6 - 4 - Talos and OpenTofu - use Rook-Ceph.md  SP - 6 - 5 - Talos and OpenTofu - Talos should be bootstrapped without kube-proxy but use Cilium CNI.md  SP - 6 - 6 - Talos and OpenTofu - This is only for dev setup in our architecture.md  SP - 7 - Pulsar Function.md
e2e/: package-lock.json  package.json  playwright.config.ts  welcome-counter.spec.ts
gitops-workloads/graphql/: gql-route.yaml  hasura-secrets.yaml
provisioning/dev/: main.tf  providers.tf  terraform.tfstate.backup
provisioning/scripts/: cleanup.sh  install-cilium.sh  install-gateway.sh  install-gitops.sh  install-harbor.sh  install-infisical.sh  install-rook-ceph.sh  install-runtimes.sh  install-workloads.sh  preamble.sh  (+12 more)
specs/: openapi.yaml
(+140 files in other folders)
