[package]
name = "stream-processor"
authors = ["Vladimir Cores <vladimir.cores@gmail.com>"]
description = "Spin WASM component that streams HPA events from Kafka to KeyDB"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = { version = "6.0.0", features = ["kafka", "redis"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
